# fafav_downloader

./: .gitignore  Makefile  README.md  dev-requirements.in  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
requirements/: requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
src/fafav_downloader/: fadownloader.py
src/fafavs/: datastore.py  fadownloader.py  fix_extentions.py  main.py
tests/: conftest.py  datastore_test.py  fadownloader_test.py  main_test.py  test_main.py
tests/fixtures/: cookie  download_out  fav_page.html  list_test  page_out  view_page.html
