[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fafav_downloader"
version = "1.0.0"
requires-python = ">=3.11"
description = "Download favorites from FurAffinity"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" }
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
# Dynamic dependencies are loaded from requirements*.txt files
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[tool.setuptools.dynamic.dependencies]
file = [
    "requirements/requirements.txt",
]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = [
        "requirements/requirements-dev.txt",
    ] }
test = { file = [
        "requirements/requirements-test.txt",
    ] }

[project.urls]
homepage = "https://github.com/Preocts/fafav_downloader"

[project.scripts]
fadownload = "fafavs.fadownloader:main"

[tool.setuptools.package-data]
"fafavs" = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [
    "tests",
]
source_pkgs = [
    "fafavs",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages",
]
test = [
    "tests/",
    "*/tests",
]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
